; ModuleID = '/home/carl/AnghaBench/linux/drivers/pci/extr_pci.c_pci_refresh_power_state.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pci/extr_pci.c_pci_refresh_power_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pci_refresh_power_state(%struct.pci_dev* %0) #0 {
  %2 = alloca %struct.pci_dev*, align 8
  store %struct.pci_dev* %0, %struct.pci_dev** %2, align 8
  %3 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %4 = call i64 @platform_pci_power_manageable(%struct.pci_dev* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %8 = call i32 @platform_pci_refresh_power_state(%struct.pci_dev* %7)
  br label %9

9:                                                ; preds = %6, %1
  %10 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %11 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %12 = getelementptr inbounds %struct.pci_dev, %struct.pci_dev* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @pci_update_current_state(%struct.pci_dev* %10, i32 %13)
  ret void
}

declare dso_local i64 @platform_pci_power_manageable(%struct.pci_dev*) #1

declare dso_local i32 @platform_pci_refresh_power_state(%struct.pci_dev*) #1

declare dso_local i32 @pci_update_current_state(%struct.pci_dev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
